# ChangeLog for app-cdr/xfburn
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/xfburn/ChangeLog,v 1.21 2009/10/24 18:35:00 ssuominen Exp $

  24 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> xfburn-0.4.2.ebuild,
  +files/xfburn-0.4.2-exo.patch:
  Fix configure.in to detect >=exo-0.5.

  27 Sep 2009; Markus Meier <maekke@gentoo.org> xfburn-0.4.2.ebuild:
  amd64/x86 stable, bug #286069

  23 Sep 2009; Samuli Suominen <ssuominen@gentoo.org> xfburn-0.4.2.ebuild:
  Don't enable gstreamer by default (because of it's current state in tree).

  23 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> xfburn-0.4.0.ebuild,
  xfburn-0.4.2.ebuild, metadata.xml:
  Rename USE xfce to USE thunar (enabled by default in desktop profiles).

*xfburn-0.4.2 (23 Aug 2009)

  23 Aug 2009; Jeremy Olexa <darkside@gentoo.org> +xfburn-0.4.2.ebuild:
  Version bump to 0.4.2

  20 Aug 2009; Jeremy Olexa <darkside@gentoo.org>
  -files/xfburn-disable-hal.patch:
  remove unused patches

  19 Mar 2009; Brent Baude <ranger@gentoo.org> xfburn-0.4.0.ebuild:
  Marking xfburn-0.4.0 ppc for bug 256151

*xfburn-0.4.1 (25 Feb 2009)

  25 Feb 2009; Christoph Mende <angelos@gentoo.org> +xfburn-0.4.1.ebuild:
  Version bump

  30 Jan 2009; Christoph Mende <angelos@gentoo.org> xfburn-0.4.0.ebuild:
  Added missing gst-plugins-base dependency

  25 Jan 2009; Markus Meier <maekke@gentoo.org> xfburn-0.4.0.ebuild:
  amd64/x86 stable, bug #256151

*xfburn-0.4.0 (24 Dec 2008)

  24 Dec 2008; Christoph Mende <angelos@gentoo.org> -xfburn-0.3.91.ebuild,
  +xfburn-0.4.0.ebuild:
  Version bump

  10 Dec 2008; Petteri Räty <betelgeuse@gentoo.org> metadata.xml:
  Remove extra > from mario's email.

  26 Nov 2008; <ssuominen@gentoo.org> metadata.xml:
  Add upstream e-mails to metadata.xml, like xscreensaver has. By request of
  upstream.

*xfburn-0.3.91 (06 Nov 2008)
