@@ -2,6 +2,6 @@ AUX xfburn-0.4.2-exo.patch 742 RMD160 b69e8ca09d3fc07d0dd8d228b7f6bd9219668668 S
 DIST xfburn-0.4.0.tar.bz2 625794 RMD160 05d23950c11b49fa243ba61f75ea751e464c5778 SHA1 c711dce71078b676555feb29fb5ae8930a12b600 SHA256 69c8ab440e3338f916cf2a4310b751d9383d87cfa0bf72e05be9dfff9a3d6e30
 DIST xfburn-0.4.2.tar.bz2 637646 RMD160 4fc66bae55e712cee9613760aaf594b3c4e9d9fe SHA1 dbc1731b8c690b0b29d3567b8e1cd93646b0c7e7 SHA256 b2b00665f8ed98c9df996ba2d0d73b3182c3b421f3927c9ab76c3424758f71b5
 EBUILD xfburn-0.4.0.ebuild 1294 RMD160 b75cb6f023e7d33ecf5fc291df2749b7bd208a43 SHA1 2794648611ed439b716ea265da237591dd4021b7 SHA256 192db6942455a901ac02127ae073b63aa4df122f40a2035d94789c72b2d5f414
-EBUILD xfburn-0.4.2.ebuild 1167 RMD160 fbc4859d098021cc1fc0d463147b282a3f0e9513 SHA1 9ad999a2bab4ee1ab6d9fc42869c786ed3a7ca92 SHA256 7a4aae020485d38c769476d1ee836355672a2382098e2388ef0e2fb3eeab8601
-MISC ChangeLog 4504 RMD160 6c2b613e677cb051960af2b627ce22c3327bf340 SHA1 d605ac148e8845b70dee2f9089d2faed16ddb7c8 SHA256 c700116f1a9fd85ec37f85962495676dd2bab66c8b14be6580ddd300c6bdc736
+EBUILD xfburn-0.4.2.ebuild 1163 RMD160 aaeee8e0137a1b2b992c2d77fade5427df9f5de3 SHA1 bed2dad7d986cf4f74635df2449033985c25da2e SHA256 65292d17d0eea6ba89091266aa8fe6b51077ada13dffe0d6d3ccf6de76e80b15
+MISC ChangeLog 4619 RMD160 2fb6a7c11be427889572457119b79cf3da9a9674 SHA1 d87d2507e3d5676f7bd8e0749f5a9eb5cfe6bc91 SHA256 eaecc93105432ba1cc36862dd728abab4c736db93d9acff1f448f38792b37eae
 MISC metadata.xml 520 RMD160 2a408ac0075f3ddee3ac57f8249b26def4fefe31 SHA1 b26733f243b880c532322ba18a8ae3c4f75558ec SHA256 f85722b65d1a592bbc8ed519da3f10f153e939012ce440a3015b8e2a43f43449
