@@ -1,6 +1,9 @@
 # ChangeLog for app-cdr/xfburn
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/xfburn/ChangeLog,v 1.21 2009/10/24 18:35:00 ssuominen Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-cdr/cvs-repo/gentoo-x86/app-cdr/xfburn/ChangeLog,v 1.22 2010/01/07 21:15:01 ranger Exp $
+
+  07 Jan 2010; Brent Baude <ranger@gentoo.org> xfburn-0.4.2.ebuild:
+  Marking xfburn-0.4.2 ppc stable for bug 289179
 
   24 Oct 2009; Samuli Suominen <ssuominen@gentoo.org> xfburn-0.4.2.ebuild,
   +files/xfburn-0.4.2-exo.patch:
